[project]
name = "load-test-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.107.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "requests>=2.31.0",
    "mlflow-tracing>=3.3.2",
    "mlflow[databricks]>=3.3.2",
    "traceloop-sdk>=0.46.2",
    "databricks-sdk>=0.65.0",
    "langfuse>=3.3.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.sources]
mlflow = { git = "https://github.com/mlflow/mlflow.git", rev = "master" }
